@@ -1,3 +1,7 @@
+2002-11-05  Masao Mutoh <mutoh@highway.ne.jp>
+
+	* sample/*.rb: Follow Ruby/GTK changes.
+
 2002-10-14  KUBO Takehiro  <kubo@jiubao.org>
 
 	* src/rbgnome-canvas-path-def.c: use rbgobj_register_property_getter()
